Pequeñas correcciones md y añadir ejercicios

--- a/codigo/Colecciones.ipynb
+++ b/codigo/Colecciones.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_de_tupla = list(tuple)  # Para concatenar se necesita que ambos sean del mismo tipo\n",
+    "lista_de_tupla = list(tupla)  # Para concatenar se necesita que ambos sean del mismo tipo\n",
     "print(lista + lista_de_tupla)\n",
     "print(tupla * 2)"
    ]
@@ -95,17 +95,27 @@
     "\n",
     "Las tuplas solo tienen dos métodos, .count() y .index(), a continuación se referencian los metodos de las listas (que también tienen esos dos métodos).\n",
     "\n",
-    ".count(<valor>) ---> Cuenta el número de repeticiones de ese valor/objeto\n",
-    ".index(<valor>) ---> Indica el índice de ese valor, pero solo la primera vez que ha sido encontrado\n",
-    ".append(<valor>) ---> Añade al final de la lista ese valor/objeto (su referencia)\n",
-    ".insert(<int>, <valor>) ---> Añade en la posicion int ese valor/objeto (su referencia)\n",
-    ".extend(<iterable>) ---> Concatena un iterable (cualquier iterable) con esa lista\n",
+    ".count(valor) ---> Cuenta el número de repeticiones de ese valor/objeto\n",
+    "\n",
+    ".index(valor) ---> Indica el índice de ese valor, pero solo la primera vez que ha sido encontrado\n",
+    "\n",
+    ".append(valor) ---> Añade al final de la lista ese valor/objeto (su referencia)\n",
+    "\n",
+    ".insert(int, valor) ---> Añade en la posicion int ese valor/objeto (su referencia)\n",
+    "\n",
+    ".extend(iterable) ---> Concatena un iterable (cualquier iterable) con esa lista\n",
+    "\n",
     ".clear() ---> Vacia la lista\n",
+    "\n",
     ".copy() ---> Crea una copia de esa lista (id() sera distinto para copias, siendo pues dos objetos distintos)\n",
-    ".pop(<int>) ---> Elimina el valor en el indice int, por defecto el último elemento\n",
-    ".remove(<valor>) ---> Elimina la primera vez que encuentra ese valor\n",
+    "\n",
+    ".pop(int) ---> Elimina el valor en el indice int, por defecto el último elemento\n",
+    "\n",
+    ".remove(valor) ---> Elimina la primera vez que encuentra ese valor\n",
+    "\n",
     ".reverse() ---> Invierte la lista\n",
-    ".sort(<bool>, <funcion>) ---> Ordena la lista. Este método es poderoso pero complejo, permite indicar si se ordena de menor a mayor, o al reves (reversed), y permite especificar un método de ordenación bastante complejo y poderoso"
+    "\n",
+    ".sort(bool, funcion) ---> Ordena la lista. Este método es poderoso pero complejo, permite indicar si se ordena de menor a mayor, o al reves (reversed), y permite especificar un método de ordenación bastante complejo y poderoso"
    ]
   },
   {
@@ -319,16 +329,25 @@
    "source": [
     "### Métodos de diccionarios\n",
     "\n",
-    ".get(<clave>, <valor>) ---> Extrae valor de esa clave, y si no la encuentra, muestra valor\n",
-    ".setdefault(<clave>, <valor>) ---> Extrae valor de esa clave, y si no la encuentra, crea una clave-valor\n",
+    ".get(clave, valor) ---> Extrae valor de esa clave, y si no la encuentra, muestra valor\n",
+    "\n",
+    ".setdefault(clave, valor) ---> Extrae valor de esa clave, y si no la encuentra, crea una clave-valor\n",
+    "\n",
     ".clear() ---> Vacia el diccionario\n",
+    "\n",
     ".copy() ---> Hace una copia del diccionario\n",
-    ".pop(<clave>, <valor>) ---> Elimina esa clave, y si no la encuentra, muestra valor\n",
-    ".update(<diccionario>) ---> Actualiza un diccionario con nuevas clave-valor\n",
+    "\n",
+    ".pop(clave, valor) ---> Elimina esa clave, y si no la encuentra, muestra valor\n",
+    "\n",
+    ".update(diccionario) ---> Actualiza un diccionario con nuevas clave-valor\n",
+    "\n",
     ".values() ---> Extrae los valores de ese diccionario\n",
+    "\n",
     ".keys() ---> Extrae las claves de ese diccionario\n",
+    "\n",
     ".items() ---> Extrae tuplas (clave, valor) de ese diccionario\n",
-    ".fromkeys(<iterable>, <valor>) ---> Crea un diccionario formando claves con el iterable, y con un mismo valor (definido en el método)"
+    "\n",
+    ".fromkeys(iterable, valor) ---> Crea un diccionario formando claves con el iterable, y con un mismo valor (definido en el método)"
    ]
   },
   {
