--- a/codigo/Control de flujo.ipynb
+++ b/codigo/Control de flujo.ipynb
@@ -291,7 +291,7 @@
     "\n",
     "Un diccionario que representa una persona, validar si es mayor de edad\n",
     "\n",
-    "*Casi toda la informacion que se manda y recibe de la web es un diccionario, es clave saber validarla*"
+    "*Casi toda la informacion que se manda y recibe de la web es un diccionario, es importante saber validarla*"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sumar conjunto de numeros y calcualr media\n",
+    "# Sumar conjunto de numeros y calcular media\n",
     "var = [3, 6, 8, 4, 1, 10, 2, -4]\n",
     "\n",
     "\n",
