--- a/codigo/Variables y fundamentos.ipynb
+++ b/codigo/Variables y fundamentos.ipynb
@@ -266,20 +266,34 @@
     "Los **métodos** son funciones especiales que pertenecen a objetos concretos, es decir, a un tipo de dato en este caso. Los strings tienen métodos que permiten realizar ciertas operaciones de forma sencilla. Aqui se adjuntan como referencia:\n",
     "\n",
     ".capitalize() ---> Transforma a texto minuscula con la primera letra mayuscula\n",
+    "\n",
     ".upper() ---> Transforma texto a mayuscula\n",
+    "\n",
     ".lower() ---> Transforma texto a minuscula\n",
+    "\n",
     ".title() ---> Transforma texto a minuscula con primera letra de cada palabra en mayuscula\n",
+    "\n",
     ".swapcase() ---> Cambia mayuscula a minuscula y viceversa\n",
-    ".startswith(<string>) ---> Comprueba si el texto empieza con un string\n",
-    ".endswith(<string>) ---> Comprueba si el texto termina con un string\n",
-    ".replace(<string>, <string>, <int>) ---> Sustituye un string por otro string, un numero de veces (por defecto, todas)\n",
-    ".count(<string>) ---> Cuenta el numero de veces que aparece un string\n",
-    ".find(<string>) ---> Muestra la posicion de un string\n",
+    "\n",
+    ".startswith(string) ---> Comprueba si el texto empieza con un string\n",
+    "\n",
+    ".endswith(string) ---> Comprueba si el texto termina con un string\n",
+    "\n",
+    ".replace(string, string, int) ---> Sustituye un string por otro string, un numero de veces (por defecto, todas)\n",
+    "\n",
+    ".count(string) ---> Cuenta el numero de veces que aparece un string\n",
+    "\n",
+    ".find(string) ---> Muestra la posicion de un string\n",
+    "\n",
     ".isdigit(), .isnumeric(), .isascii(), isdecimal(), ... ---> Comprueba si es un digito, decimal, ascii, alfanumerico, mayuscula, minuscula, ...\n",
-    ".strip(<string>), .rstrip(<string>), .lstrip(<string>) ---> Elimina caracteres de un string (y se puede ver de donde eliminar, por defecto espacio en blanco)\n",
-    ".split(<string>), .rsplit(<string>), .lsplit(<string>) ---> Divide texto de acuerdo a un string (por defecto divide por espacios en blanco)\n",
-    ".join(<iterable>) ---> Transforma un iterable en un string, con el propio string como punto de unión\n",
-    ".zfill(<int>) ---> Rellena con ceros el texto"
+    "\n",
+    ".strip(string), .rstrip(string), .lstrip(string) ---> Elimina caracteres de un string (y se puede ver de donde eliminar, por defecto espacio en blanco)\n",
+    "\n",
+    ".split(string), .rsplit(string), .lsplit(string) ---> Divide texto de acuerdo a un string (por defecto divide por espacios en blanco)\n",
+    "\n",
+    ".join(iterable) ---> Transforma un iterable en un string, con el propio string como punto de unión\n",
+    "\n",
+    ".zfill(int) ---> Rellena con ceros el texto"
    ]
   },
   {
@@ -292,6 +306,47 @@
     "nombre = \"joaquin hernandez martinez\"\n",
     "test = nombre.capitalize()\n",
     "print(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d490290",
+   "metadata": {},
+   "source": [
+    "## F-Strings\n",
+    "\n",
+    "Los f-strings son strings con formato. Tienen la forma `f\"<contenido>{<interpolacion>}\"` y permiten interpolar (sustituir) valores entre las llaves especificadas (cualquier valor o expresión, son muy poderosos)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d42c210e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saludo = f\"Hola! Mi nombre es {nombre}\"\n",
+    "print(saludo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f9109df",
+   "metadata": {},
+   "source": [
+    "## Caracteres especiales y caracteres de escape\n",
+    "\n",
+    "ALgunos caracteres, como `\\n` y `\\t`, son especiales en el sentido que representan un salto de linea o una tabulación. En general, utilizar `\\` **escapa** ese caracter, haciendo que no se tenga en cuenta como caracter (ejemplo: se puede escapar `\\` en windows haciendo `\\\\`, la primera para indicar que se escapa, y la segunda para indicar el caracter, esto a veces es importante manejando archivos y directorios)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4275dd76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Esto es una linea\\nY esto es otra linea distinta\\n\\tY esta ultima linea esta tabulada\")"
    ]
   },
   {
@@ -425,13 +480,19 @@
    "source": [
     "## Otras funciones interesantes\n",
     "\n",
-    "abs(<numero>) ---> Valor absoluto de un número\n",
-    "max(<secuencia>) ---> Valor máximo de una secuencia\n",
-    "min(<secuencia>) ---> Valor mínimo de una secuencia\n",
-    "pow(<int>, <int>) ---> Eleva un int a un segundo int\n",
-    "round(<numero>, <int>) ---> Redondea un número a un número int de decimales fijos (por defecto coma flotante)\n",
-    "len(<iterable>) ---> Tamaño de un iterable\n",
-    "range(<int>, <int>, <int>) ---> Crea saltos desde un inicio (por defecto 0) hasta un final, con un salto (opcional)"
+    "abs(numero) ---> Valor absoluto de un número\n",
+    "\n",
+    "max(secuencia) ---> Valor máximo de una secuencia\n",
+    "\n",
+    "min(secuencia) ---> Valor mínimo de una secuencia\n",
+    "\n",
+    "pow(int, int) ---> Eleva un int a un segundo int\n",
+    "\n",
+    "round(numero, int) ---> Redondea un número a un número int de decimales fijos (por defecto coma flotante)\n",
+    "\n",
+    "len(iterable) ---> Tamaño de un iterable\n",
+    "\n",
+    "range(int, int, int) ---> Crea saltos desde un inicio (por defecto 0) hasta un final, con un salto (opcional)"
    ]
   },
   {
