Añadido if ternario y algun cambio menor

--- a/codigo/Control de flujo.ipynb
+++ b/codigo/Control de flujo.ipynb
@@ -256,6 +256,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad52290d",
+   "metadata": {},
+   "source": [
+    "### Condicionales ternarios\n",
+    "\n",
+    "Los condicionales ternarios son formas especiales de if/else que tienen la forma\n",
+    "\n",
+    "```python\n",
+    "<resultado verdadero> if <condicion> else <resultado falso>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "399ddbe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edad = int(input(\"Dime tu edad: \"))\n",
+    "respuesta = \"Eres mayor de edad\" if edad >= 18 else \"Eres un niño\"\n",
+    "print(respuesta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ad0b1754-7b08-4115-adc8-0b149b19136e",
    "metadata": {},
    "source": [
