--- a/codigo/Variables y fundamentos.ipynb
+++ b/codigo/Variables y fundamentos.ipynb
@@ -108,8 +108,16 @@
    "outputs": [],
    "source": [
     "variable_1 = \"Joaquin\"\n",
-    "variable_2 = variable_1  # Referencia 2 apunta a referencia 1 (o 2 -> 1 )\n",
-    "variable_1 = \"Ana\"  # Ahora sustituyo variable 1\n",
+    "variable_2 = variable_1  \n",
+    "variable_1 = \"Ana\"\n",
+    "print(\"Mi variable 1 es:\", variable_1)\n",
+    "print(\"Mi variable 2 es:\", variable_2)\n",
+    "variable_2 = variable_1 = [1, 2, 3] # Referencia 2 apunta a referencia 1 (o 2 -> 1 )\n",
+    "print(variable_1 == variable_2, variable_1 is variable_2,\n",
+    "      id(variable_1), id(variable_2))\n",
+    "variable_2[0] = 4\n",
+    "print(variable_1 == variable_2, variable_1 is variable_2,\n",
+    "      id(variable_1), id(variable_2))\n",
     "print(\"Mi variable 1 es:\", variable_1)\n",
     "print(\"Mi variable 2 es:\", variable_2)"
    ]
