Terminados apuntes clase 2

--- a/codigo/IO archivos, excepciones y random y datetime.ipynb
+++ b/codigo/IO archivos, excepciones y random y datetime.ipynb
@@ -49,15 +49,297 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "638b58cf-79e0-4a17-beb6-7eb83533a871",
+   "metadata": {},
+   "source": [
+    "## Métodos de archivos\n",
+    "\n",
+    "Estos son los principales métodos de los tipos de datos archivo.\n",
+    "\n",
+    ".close() ---> Cierra el archivo, importante hacerlo cada vez que se termine de usar\n",
+    ".read(int) ---> Lee un numero int de bytes (por defecto, todo el archivo al completo)\n",
+    ".readline(int) ---> Lee una única linea del archivo (también puedes especificar tamaño en bytes). Se puede iterar en un bucle\n",
+    ".readlines(int) ---> Lee lineas guardandolas en una lista. Se puede especificar tamaño en bytes\n",
+    ".tell() ---> Muestra la posición actual del cursor\n",
+    ".seek(int) ---> Situa el cursor de lectura en la posición int\n",
+    ".write(byte|str) ---> Escribe en el archivo, ya sea como texto (str) o bytes (byte)\n",
+    ".writelines(lista) ---> Escribe linea a linea en el archivo, siendo una linea por cada posición en la lista"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26ad665b-d71e-4983-880d-b401c7344684",
+   "metadata": {},
+   "source": [
+    "## Context managers\n",
+    "\n",
+    "Los **gestores de contexto** son herramientas especiales y avanzadas que permiten simplificar el trabajo de tareas como el uso de archivos. Se crean con el módulo `contextlib` y hacen muy cómodo manejar streams, I/O, archivos y demás.\n",
+    "\n",
+    "```python\n",
+    "with open(<archivo>, <modo>) as archivo:\n",
+    "    ...\n",
+    "```\n",
+    "\n",
+    "De esta forma se crea un *bloque de trabajo*, con su propio scope, para ese archivo. Además, *se cierra automaticamente al salir de scope*, por lo que no hace falta cerrarlo, y abstrae la lógica de open() a, simplemente, utilizar el objeto *archivo*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65b0a377-220f-4c22-aee5-b6f30de61ba8",
+   "metadata": {},
+   "source": [
+    "# Manejar errores: Try / Except\n",
+    "\n",
+    "Python incluye un systema try/except para gestionar los errores. Cada error es un **objeto Exception**, y el control de estos errores se realiza mediante los **bloques try/except/else/finally**.\n",
+    "\n",
+    "```python\n",
+    "try:\n",
+    "    ...  # codigo que se controla para errores\n",
+    "except <excepcion>:\n",
+    "    ...  # codigo para cuando salta el error\n",
+    "else:\n",
+    "    ...  # codigo para cuando no salta el error\n",
+    "finally:\n",
+    "    ...  # codigo que siempre se ejecuta\n",
+    "```\n",
+    "\n",
+    "En la realidad, con utilizar `try` y `except` es suficiente."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44c7198b-a7fc-41fd-a441-962d47d9d5f7",
+   "id": "ac024e44-bdbb-448b-bf71-f57da0719abc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Estos son los principales métodos de los tipos de datos archivo.\n",
+    "x = 10\n",
+    "y = 0\n",
     "\n",
-    ".close() ---> Cierra el archivo, importante hacerlo cada vez que se termine de usar\n"
+    "try:\n",
+    "    resultado = x / y  # Intento dividir por cero\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"No se puede dividir por cero!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90604215-3a5e-4665-9cad-bc7ebff66076",
+   "metadata": {},
+   "source": [
+    "En Python se pueden crear varios bloques except (para diferentes errores), e incluso grupos de errores comunes. Además, se pueden crear nuevas excepciones para errores personalizados, y tenemos una clase genérica Exception para las excepciones generales.\n",
+    "\n",
+    "## Raise\n",
+    "\n",
+    "**Elevar un error** se hace con `raise`, y permite crear errores cuando es necesario.\n",
+    "\n",
+    "```python\n",
+    "raise <excepcion>(<mensaje>)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9271c68-1224-4712-9d23-ea97ac564e45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edad = int(input(\"Pon aqui tu edad: \"))\n",
+    "\n",
+    "if edad < 0:\n",
+    "    raise ValueError(\"Esta edad es incorrecta!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33667225-c2cb-4fa1-ab50-c946281c9cae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numero = input(\"Dime un numero: \")\n",
+    "try:\n",
+    "    numero += 10\n",
+    "except Exception as error:\n",
+    "    print(error)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d91f6e3-8123-43c6-83c6-e1f382d81b97",
+   "metadata": {},
+   "source": [
+    "# Librería estandar: random\n",
+    "\n",
+    "El módulo `random` proporciona un generador de numeros pseudoaleatorios rápido basado en el algoritmo de Mersenne.\n",
+    "\n",
+    "## Generar números aleatorios\n",
+    "\n",
+    "```python\n",
+    "from random import random\n",
+    "\n",
+    "var = random()\n",
+    "```\n",
+    "\n",
+    "`random()` genera un número aleatorio entre 0.0 y (casi) 1.0, con un gran número de decimales\n",
+    "\n",
+    "```python\n",
+    "from random import uniform\n",
+    "\n",
+    "empieza: float\n",
+    "acaba: float\n",
+    "var = uniform(empieza, acaba)\n",
+    "```\n",
+    "\n",
+    "`uniform()` genera un número aleatorio entre un numero float y otro numero float, con un gran número de decimales\n",
+    "\n",
+    "```python\n",
+    "from random import randint\n",
+    "\n",
+    "empieza: int\n",
+    "acaba: int\n",
+    "var = randint(empieza, acaba)\n",
+    "```\n",
+    "\n",
+    "`randint()` genera un número aleatorio entre un numero int y otro numero int, sin decimales\n",
+    "\n",
+    "## Seeding\n",
+    "\n",
+    "**Seeding** es la práctica de generar los *mismos valores aleatorios*.\n",
+    "\n",
+    "```python\n",
+    "from random import seed\n",
+    "\n",
+    "valor_seed: int\n",
+    "seed(valor_seed)\n",
+    "...\n",
+    "```\n",
+    "\n",
+    "`seed()` establece como valor semilla un número, de forma que a partir de entonces todo cálculo aleatorio tendrá los mismos valores (de acuerdo a la semilla)\n",
+    "\n",
+    "## Escogiendo elementos aleatorios\n",
+    "\n",
+    "```python\n",
+    "from random import choice\n",
+    "\n",
+    "iterable: iterable\n",
+    "var = choice(iterable)\n",
+    "```\n",
+    "\n",
+    "`choice()` elije un elemento aleatorio de un iterable\n",
+    "\n",
+    "```python\n",
+    "from random import shuffle\n",
+    "\n",
+    "lista: list\n",
+    "var = shuffle(lista)\n",
+    "```\n",
+    "\n",
+    "`shuffle()` reorganiza de forma aleatoria los elementos de una lista (in place)\n",
+    "\n",
+    "```python\n",
+    "from random import sample\n",
+    "\n",
+    "iterable: iterable\n",
+    "numero_elementos: int\n",
+    "var = sample(iterable, numero_elementos)\n",
+    "```\n",
+    "\n",
+    "`sample()` toma unos datos y genera una muestra aleatoria de tamaño reducido (que se especifica como int)\n",
+    "\n",
+    "## Clase Random y distribuciones estadisticas\n",
+    "\n",
+    "Todas estas funciones estan disponibles como métodos de una clase `Random` preparada para manejar con orientación a objetos este tipo de lógica. Por último, `random` incluye una serie de funciones para crear muestras aleatorias de diferentes distribuciones estadisticas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37e72d73-ae18-4f01-8753-9f358474422d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear un dado\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80c30c1d-27a3-466f-ab6d-11bb8a4c392e",
+   "metadata": {},
+   "source": [
+    "# Librería estandar: sys\n",
+    "\n",
+    "Es un módulo que permite manejar el interprete y extraer información de este.\n",
+    "\n",
+    "```python\n",
+    "from sys import version\n",
+    "\n",
+    "var = version()\n",
+    "```\n",
+    "\n",
+    "`version()` muestra la versión del interprete actual de Python.\n",
+    "\n",
+    "```python\n",
+    "from sys import platform\n",
+    "\n",
+    "var = platform()\n",
+    "```\n",
+    "\n",
+    "`platform()` muestra la plataforma (sistema operativo) que se está utilizando.\n",
+    "\n",
+    "```python\n",
+    "from sys import executable, prefix\n",
+    "\n",
+    "var_1 = executable()\n",
+    "var_2 = prefix()\n",
+    "```\n",
+    "\n",
+    "Ambos muestran la información del lugar donde está almacenado el interprete, ya sea el ejecutable o el directorio general.\n",
+    "\n",
+    "```python\n",
+    "from sys import argv\n",
+    "\n",
+    "var = argv\n",
+    "```\n",
+    "\n",
+    "`argv` es una *lista* que contiene la *entrada por terminal* al iniciar un script.\n",
+    "\n",
+    "```python\n",
+    "from sys import exit\n",
+    "\n",
+    "exit()\n",
+    "```\n",
+    "\n",
+    "`exit()` termina el proceso de este módulo y cierra el script.\n",
+    "\n",
+    "```python\n",
+    "from sys import getsizeof\n",
+    "\n",
+    "objeto: object\n",
+    "var = getsizeof(objeto)\n",
+    "```\n",
+    "\n",
+    "`getsizeof()` muestra el tamaño en memoria RAM de un objeto.\n",
+    "\n",
+    "```python\n",
+    "from sys import modules\n",
+    "\n",
+    "var = modules\n",
+    "```\n",
+    "\n",
+    "`modules` muestra los módulos importados mapeados a los objetos que contienen su namespace.\n",
+    "\n",
+    "```python\n",
+    "from sys import path\n",
+    "\n",
+    "var = path\n",
+    "```\n",
+    "\n",
+    "`path` es el **pythonpath**, la ruta de importacion de Python, es decir, los lugares donde Python busca para importar módulos o paquetes."
    ]
   }
  ],
