Ejercicios de casa corregidos

--- a/codigo/Control de flujo.ipynb
+++ b/codigo/Control de flujo.ipynb
@@ -407,7 +407,7 @@
    "outputs": [],
    "source": [
     "# Juntar dos secuencias en un diccionario\n",
-    "# > Pista: usar enumerate()\n",
+    "# > Pista: usar enumerate() o zip()\n",
     "claves = [1, 2, 3, 4, 5]\n",
     "valores = [\"Juan\", \"Ana\", \"Raquel\", \"Antonio\", \"Belen\"]\n",
     "\n",
@@ -430,24 +430,6 @@
     "\n",
     "print(resultado)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f3c9813a-5599-4fe4-8f83-823cab2d14c3",
-   "metadata": {},
-   "source": [
-    "# Otros keywords y funciones\n",
-    "\n",
-    "and, or, not, del, in, pass, continue, break, all(), any(), enumerate(), sorted(), reversed(), zip(), isinstance()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8747cea0-6742-44d8-b656-26a6e5d6758c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
