--- a/codigo/ejercicios.ipynb
+++ b/codigo/ejercicios.ipynb
@@ -77,24 +77,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conseguir patrones\n",
-    "\n",
-    "1         1\n",
-    "2 2       1 2\n",
-    "3 3 3     1 2 3\n",
-    "4 4 4 4   1 2 3 4"
+    "Conseguir patrones"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#1         1\n",
+    "#2 2       1 2\n",
+    "#3 3 3     1 2 3\n",
+    "#4 4 4 4   1 2 3 4"
+   ]
   },
   {
    "cell_type": "code",
