--- a/codigo/Colecciones.ipynb
+++ b/codigo/Colecciones.ipynb
@@ -177,7 +177,19 @@
    "source": [
     "# Guardando numeros primos en una lista\n",
     "\n",
-    "\n"
+    "primos = []\n",
+    "inicio = int(input(\"Dame un numero de inicio: \"))\n",
+    "final = int(input(\"Dame un numero final: \"))\n",
+    "for numero in range(inicio, final + 1):\n",
+    "    if numero > 1:\n",
+    "        es_primo = True\n",
+    "        for raiz in range(2, numero):\n",
+    "            if numero % raiz == 0:\n",
+    "                es_primo = False\n",
+    "                break\n",
+    "        if es_primo:\n",
+    "            primos.append(numero)\n",
+    "print(primos)"
    ]
   },
   {
@@ -189,7 +201,13 @@
    "source": [
     "# Generando numeros de Fibonacci en una lista\n",
     "\n",
-    "\n"
+    "numeros_fibonacci = int(input(\"Cuantos numeros de Fibonacci quieres: \"))\n",
+    "n1, n2 = 0, 1\n",
+    "fibonacci = [n1, n2]\n",
+    "for _ in range(numeros_fibonacci):\n",
+    "    n1, n2 = n2, n1 + n2\n",
+    "    fibonacci.append(n2)\n",
+    "print(fibonacci)"
    ]
   },
   {
@@ -199,9 +217,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Alumnos: Comprobar si primera y ultima letras de un string son la misma\n",
+    "# Alumnos: Comprobar si primera y ultima letras de un string son la misma (sin discriminar mayus/minus)\n",
     "\n",
-    "\n"
+    "string = input(\"Dame un string: \").lower()\n",
+    "if string[0] == string[-1]:\n",
+    "    print(\"Primera y ultima letras son la misma\")\n",
+    "else:\n",
+    "    print(\"No tiene las mismas letras al principio y al final\")"
    ]
   },
   {
@@ -213,7 +235,15 @@
    "source": [
     "# Comprobar si un numero entero es palindromo y devolver la suma de sus digitos\n",
     "\n",
-    "\n"
+    "numero = input(\"Dime un numero: \")\n",
+    "if numero == numero[::-1]:\n",
+    "    print(f\"{numero} es un palindromo\")\n",
+    "    suma_digitos = 0\n",
+    "    for digito in numero:\n",
+    "        suma_digitos += int(digito)\n",
+    "    print(f\"Y la suma de sus digitos es {suma_digitos}\")\n",
+    "else:\n",
+    "    print(f\"{numero} no es un palindromo\")"
    ]
   },
   {
@@ -374,7 +404,25 @@
    "id": "342b909c-2bf5-45c2-9e0e-d9236321bbd9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "alumnos = {\n",
+    "    1: {\n",
+    "        \"nombre\": \"lorgar\",\n",
+    "        \"edad\": 15,\n",
+    "        \"notas\": [4, 8, 2, 6.5]\n",
+    "    },\n",
+    "    2: {\n",
+    "        \"nombre\": \"russ\",\n",
+    "        \"edad\": 22,\n",
+    "        \"notas\": [10, 6-75, 8, 3]\n",
+    "    },\n",
+    "    3: {\n",
+    "        \"nombre\": \"angron\",\n",
+    "        \"edad\": 51,\n",
+    "        \"notas\": [1, 2.5, 2, 8]\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -393,8 +441,13 @@
    "source": [
     "# Validar una lista de telefonos\n",
     "\n",
-    "\n",
-    "\n"
+    "telefonos = [\"+34 696 02 68 63\", \"+aa 423 23 23 23\", \"+12 31 41 12 33\", \"+03 123 32 14 52\", \"+51 4i2 63 27 66\"]\n",
+    "for telefono in telefonos:\n",
+    "    telefono = telefono.replace(\" \", \"\")\n",
+    "    if len(telefono) != 12 or telefono[0] != '+' or not telefono[1:].isdigit():\n",
+    "        print(\"El telefono no es valido\")\n",
+    "        continue\n",
+    "    print(\"El telefono es valido\")"
    ]
   },
   {
@@ -406,7 +459,20 @@
    "source": [
     "# Validar un diccionario con emails y si estan activos o no\n",
     "\n",
-    "\n",
+    "emails = {\n",
+    "    \"paula\": {\n",
+    "        \"email\": \"paulitabonita13@outlook.com\",\n",
+    "        \"activo\": True\n",
+    "    },\n",
+    "    \"carlos\": {\n",
+    "        \"email\": \"cafer87@gmail.com\",\n",
+    "        \"activo\": False\n",
+    "    },\n",
+    "    \"nerea\": {\n",
+    "        \"email\": \"lady_rainbow_vlc@yahoo.com\",\n",
+    "        \"activo\": True\n",
+    "    }\n",
+    "}\n",
     "\n"
    ]
   },
