Preparar la clase 2

--- a/codigo/funciones.ipynb
+++ b/codigo/funciones.ipynb
@@ -292,7 +292,7 @@
     "      TypeError: Si la cantidad no es float.\n",
     "    \"\"\"\n",
     "    if not isinstance(dolares, float):\n",
-    "        raise TypeError(\"El tipo no representa una cantidad de dolares)\n",
+    "        raise TypeError(\"El tipo no representa una cantidad de dolares\")\n",
     "    return f\"{dolares}$ son {dolares * 0.93}€\"\n",
     "\n",
     "print(dolar_a_euro(320.66))"
@@ -513,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lambdas y funcioines anonimas\n",
+    "## Lambdas y funciones anonimas\n",
     "\n",
     "Una **función anónima** es una función que *no tiene nombre*, es decir, se define y usa en el mismo lugar. En Python, estas funciones se llaman *lambdas*.\n",
     "\n",
