Ejercicios de clase hechos

--- a/codigo/funciones.ipynb
+++ b/codigo/funciones.ipynb
@@ -56,8 +56,8 @@
    "outputs": [],
    "source": [
     "def suma_dos_numeros():\n",
-    "    numero_1 = 10\n",
-    "    numero_2 = 20\n",
+    "    numero_1 = int(input(\"Primer numero: \"))\n",
+    "    numero_2 = int(input(\"Segundo numero: \"))\n",
     "    return numero_1 + numero_2  # Especificamos que devuelva la suma de los dos numeros\n",
     "\n",
     "mi_suma = suma_dos_numeros()  # Se guarda en una variable el return de la funcion\n",
@@ -87,8 +87,29 @@
     "def suma_dos_numeros(numero_1, numero_2):  # Estos son sus dos argumentos\n",
     "    return numero_1 + numero_2\n",
     "\n",
-    "mi_suma = suma_dos_numeros(3, 5)  # Y aqui se le pasan dos parametros, 3 y 5\n",
-    "print(mi_suma)"
+    "mi_suma = suma_dos_numeros(13, 5)  # Y aqui se le pasan dos parametros, 13 y 5\n",
+    "print(mi_suma)\n",
+    "mi_otra_suma = suma_dos_numeros(mi_suma, 10)\n",
+    "print(mi_otra_suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para restar dos numeros\n",
+    " \n",
+    "numero_1 = int(input(\"Escribe el primer numero:\"))\n",
+    "numero_2 = int(input(\"Escribe el segundo numero:\"))\n",
+    " \n",
+    "def resta_dos_numeros(numero_1, numero_2):  # Estos son sus dos argumentos\n",
+    "    return numero_1 - numero_2\n",
+    " \n",
+    "mi_resta = resta_dos_numeros(numero_1, numero_2)\n",
+    " \n",
+    "print(mi_resta)"
    ]
   },
   {
@@ -110,8 +131,8 @@
     "def invertir(lista):\n",
     "    return lista[::-1] if type(lista) == list else \"Solo puedo invertir listas\"\n",
     "\n",
-    "lista = [1, 5, 2, 7, 1, 5]\n",
-    "print(invertir(lista))"
+    "mi_lista = [1, 2, 3, 4, 5]\n",
+    "print(invertir(lista=mi_lista))"
    ]
   },
   {
@@ -134,10 +155,11 @@
     "    if auth:\n",
     "        print(f\"Conectado a {url}\")\n",
     "    else:\n",
-    "        return \"Contraseña incorrecta\n",
+    "        return \"Contraseña incorrecta\"\n",
     "    return \"Exito en conexion\" if persistencia else \"Transferencia correcta, cerrando sesion\"\n",
     "\n",
-    "status = conectar_a_base_de_datos(\"127.0.0.20\", \"admin123\", True)"
+    "status = conectar_a_base_de_datos(\"127.0.0.20\", \"admin123\", persistencia=True)\n",
+    "print(status)"
    ]
   },
   {
@@ -153,15 +175,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conectar_a_base_de_datos(url, contraseña, persistencia=True):\n",
+    "def conectar_a_base_de_datos(url, /, contraseña=False, *, persistencia=True):\n",
     "    auth = True  # Aqui podemos tener una funcion que evalue la contraseña\n",
+    "    if not contraseña:\n",
+    "        auth = False\n",
     "    if auth:\n",
     "        print(f\"Conectado a {url}\")\n",
     "    else:\n",
-    "        return \"Contraseña incorrecta\n",
+    "        return \"Contraseña incorrecta\"\n",
     "    return \"Exito en conexion\" if persistencia else \"Transferencia correcta, cerrando sesion\"\n",
     "\n",
-    "status = conectar_a_base_de_datos(\"127.0.0.20\", \"admin123\")"
+    "status = conectar_a_base_de_datos(\"127.0.0.20\", \"123\", persistencia=False)\n",
+    "print(status)"
    ]
   },
   {
@@ -171,7 +196,7 @@
     "Y se puede *obligar* a tratar ciertos parametros como claves (para obligar a una mayor claridad en el código). Por precedencia, primero se deben especificar los argumentos por posición, y despues, los argumentos por clave.\n",
     "\n",
     "```python\n",
-    "def mi_funcion(arg_1, /, arg_posicional, *, kwarg_1):  # arg_1 esta obligado a ser posicional, y kwarg_1 esta obligado a ser por clave\n",
+    "def mi_funcion(arg_posicional, /, arg_normal, *, kwarg_1):  # arg_posicional esta obligado a ser posicional, y kwarg_1 esta obligado a ser por clave\n",
     "    ...\n",
     "```"
    ]
@@ -188,7 +213,7 @@
     "titulo(\"El gran Lebowsky\", ancho=80)\n",
     "titulo(\"Caminando entre lobos\", \"#\")\n",
     "titulo(\"American Beauty\", filigrana=\"*\")\n",
-    "titulo(texto=\"Jurasic Park\")\n",
+    "titulo(\"Jurasic Park\", filigrana=\"=\", ancho=120)\n",
     "titulo(\"La milla verde\", ancho=20)"
    ]
   },
@@ -220,8 +245,7 @@
     "    print(f\"Has introducido los numeros {numeros}\")\n",
     "    return sum(numeros)\n",
     "\n",
-    "lista_numeros = [1, 5, 2, 4, 1, 8, 2, 4, -2]\n",
-    "print(suma(lista_numeros))\n",
+    "print(suma(1, 4, 2, 5, 1, 4, 7, 9, 2, 3, 10))\n",
     "\n",
     "def concatenar(**contexto):\n",
     "    string_final = \"\"\n",
@@ -293,7 +317,7 @@
     "    \"\"\"\n",
     "    if not isinstance(dolares, float):\n",
     "        raise TypeError(\"El tipo no representa una cantidad de dolares\")\n",
-    "    return f\"{dolares}$ son {dolares * 0.93}€\"\n",
+    "    return f\"{dolares}$ son {round(dolares * 0.93, 2)}€\"\n",
     "\n",
     "print(dolar_a_euro(320.66))"
    ]
@@ -333,13 +357,27 @@
     "def resta(n1: int, n2: int) -> int:\n",
     "    return n1 - n2\n",
     "\n",
+    "def multiplicacion(n1: int, n2: int) -> int:  # Crear otra funcion es sencillo\n",
+    "    return n1 * n2\n",
+    "\n",
+    "division = lambda n1, n2: n1 / n2  # Incluso por lambda\n",
     "\n",
     "\n",
-    "def calculadora(operacion: callable, n1: int, n2: int) -> int:\n",
+    "def calculadora(operacion: callable, n1: float | int, n2: float | int) -> float | int:\n",
+    "    \"\"\"Hace calculos numericos, definidos previamente por el desarrollador\n",
+    "\n",
+    "    Args:\n",
+    "        operacion(funcion): Determina lo que se va a hacer con los numeros\n",
+    "        n1(int o float): Primer numero\n",
+    "        n2(int o float): Segundo numero\n",
+    "\n",
+    "    Returns:\n",
+    "        La operacion aplicada a los dos numeros\n",
+    "    \"\"\"\n",
     "    resultado = operacion(n1, n2)  # Esto se llama funcion de primer orden, porque se ha pasado como argumento\n",
     "    return resultado\n",
     "\n",
-    "print(calculadora(suma, 10, 12))"
+    "print(calculadora(suma, 1200, 120))  # Usar estas funciones es facil, ya que se inyecta como parametro"
    ]
   },
   {
@@ -364,16 +402,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print = \"este es mi print\"\n",
-    "print(print)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -395,14 +423,14 @@
    "outputs": [],
    "source": [
     "var = \"scope global\"\n",
-    "for var in range(8):  # este var pertenece solo al bloque\n",
+    "for var in range(8):  # Scope es de funcion\n",
     "    print(var)\n",
-    "print(var)\n",
+    "print(var)  # Var ha cambiado porque esto es un bloque\n",
     "\n",
     "def mi_funcion():\n",
     "    var = \"dentro de funcion\"\n",
-    "    print(var)\n",
-    "print(var)"
+    "    print(var)  # Este var, al ser de funcion, si esta entro de scope\n",
+    "mi_funcion()"
    ]
   },
   {
@@ -469,6 +497,7 @@
     "\n",
     "var = 100\n",
     "def fuera():\n",
+    "    var = 10  #Este no lo mira porque es enclosing y no global\n",
     "    def dentro():\n",
     "        global var  # Utiliza ahora el scope global\n",
     "        print(var)  # En namespace\n",
@@ -486,7 +515,7 @@
     "\n",
     "Python incluye una serie de funciones para investigar el namespace.\n",
     "\n",
-    "`globals()` devuelve una referencia como diccionario del namespace global actual. Es normal ver nombres como */_/_name/_/_* o /_/_doc/_/_. **Esto permite modificar el namespace global directamente** manipulando este diccionario, pero en la mayoria de casos ni es lo normal ni es lo recomendable.\n",
+    "`globals()` devuelve una referencia como diccionario del namespace global actual. Es normal ver nombres como *__name/_/_* o /_/_doc/_/_. **Esto permite modificar el namespace global directamente** manipulando este diccionario, pero en la mayoria de casos ni es lo normal ni es lo recomendable.\n",
     "\n",
     "`locals()` es parecida, pero para el namespace local. La unica diferencia entre `globals()` y `locals()` es que *el primero devuelve una referencia mientras que el segundo devuelve el diccionario en si*.\n",
     "\n",
@@ -503,8 +532,8 @@
     "def fuera():\n",
     "    var = 2\n",
     "    def dentro():\n",
-    "        var = \"3\n",
-    "        print(locals())\n",
+    "        var = 3\n",
+    "        print(locals())  # locals() inspecciona las variables lcales\n",
     "    dentro()\n",
     "fuera()"
    ]
@@ -552,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pedir numeros hasta que se meta 0, y dar una lista con la suma digital de todos esos numeros"
+    "Pedir numeros hasta que se meta 0, y dar la suma de todos esos numeros"
    ]
   },
   {
@@ -560,35 +589,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Hacer una lambda para ordenar por edad en un diccionario"
+    "def pedir_numeros():\n",
+    "    resultado = 0\n",
+    "    while True:\n",
+    "        numero = int(input(\"Dame un numero: \"))\n",
+    "        if numero == 0:\n",
+    "            break\n",
+    "        resultado += numero\n",
+    "    return resultado\n",
+    "\n",
+    "print(pedir_numeros())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Crear un sistema de movimiento en coordenadas x, y (planas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -602,7 +614,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "traduccion = {\n",
+    "    \"A\": \"U\",\n",
+    "    \"T\": \"A\",\n",
+    "    \"C\": \"G\",\n",
+    "    \"G\": \"C\"\n",
+    "}\n",
+    "\n",
+    "# Hecho con funcion\n",
+    "def adn_a_arn(hebra: str) -> str:\n",
+    "    resultado = \"\"\n",
+    "    for par in hebra:\n",
+    "        resultado += traduccion[par]\n",
+    "    return resultado\n",
+    "\n",
+    "hebra = \"ATAGATCATAGGCATAACCA\"\n",
+    "arn = adn_a_arn(hebra)\n",
+    "print(hebra)\n",
+    "print(arn)\n",
+    "\n",
+    "# Hecho con lambda\n",
+    "trad = lambda base_nitrogenada: traduccion[base_nitrogenada]\n",
+    "resultado = \"\"\n",
+    "for par in hebra:\n",
+    "    resultado += trad(par)\n",
+    "print(resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -616,21 +654,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Encontrar el siguiente cuadrado perfecto"
+    "string = \"ab3nj2p15aab  3\"\n",
+    "\n",
+    "def eleva_cuadrado(string: str) -> list[int]:\n",
+    "    numeros = []\n",
+    "    for caracter in string:\n",
+    "        if caracter.isdigit():\n",
+    "            numeros.append(int(caracter) ** 2)\n",
+    "    return numeros\n",
+    "\n",
+    "print(eleva_cuadrado(string))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -644,21 +679,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Validar fechas"
+    "test = \"127.0.0.1\"\n",
+    "\n",
+    "def validar_ip(ip: str) -> str:\n",
+    "    lista_ip = ip.split(\".\")\n",
+    "    for numero in lista_ip:\n",
+    "        if not 0 <= int(numero) < 255:\n",
+    "            return \"Ip no valida\"\n",
+    "    return \"Ip valida\"\n",
+    "\n",
+    "ip = validar_ip(test)\n",
+    "print(ip)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
