--- a/codigo/Funciones.ipynb
+++ b/codigo/Funciones.ipynb
@@ -395,7 +395,7 @@
     "    3. Enclosing (accesible por estar en namespace local de una funcion de orden superior)\n",
     "    4. Local (el propio de ese lugar de codigo, generalmente perteneciente a una funcion)\n",
     "\n",
-    "![](https://realpython.com/cdn-cgi/image/width=549,format=auto/https://files.realpython.com/media/t.fd7bd78bbb47.png)\n",
+    "<img src=\"https://realpython.com/cdn-cgi/image/width=549,format=auto/https://files.realpython.com/media/t.fd7bd78bbb47.png\" width=\"300\" height=\"300\" />\n",
     "\n",
     "La existencia de multiples namespaces implica que hay un **scope**, es decir, un contexto donde una variable (o dato) vive.\n",
     "Pytho sigue la regla del LEGB, yendo desde el scope más local hasta el scope más general. **Debido a esto, es siempre mala idea utilizar palabras clave para definir variables, ya que eliminamos de scope esas variables o funciones**"
@@ -409,9 +409,11 @@
     "\n",
     "Se tienen las keywords `global` y `nonlocal` para manejar el acceso al scope (global y enclosing concretamente), aunque rara vez se utilizan, ya que el scope por defecto es suficiente.\n",
     "\n",
-    "![](https://realpython.com/cdn-cgi/image/width=756,format=auto/https://files.realpython.com/media/t.0ee0e5dafa9d.png)\n",
+    "<img src=\"https://realpython.com/cdn-cgi/image/width=756,format=auto/https://files.realpython.com/media/t.0ee0e5dafa9d.png\" width=\"300\" height=\"300\" />\n",
     "\n",
-    "![](https://realpython.com/cdn-cgi/image/width=954,format=auto/https://files.realpython.com/media/t.b7e3c1b7bd96.png)\n",
+    "---\n",
+    "\n",
+    "<img src=\"https://realpython.com/cdn-cgi/image/width=954,format=auto/https://files.realpython.com/media/t.b7e3c1b7bd96.png\" width=\"300\" height=\"300\" />\n",
     "\n",
     "El scope en Python es **a nivel función**, mientras que *los bloques crean y destruyen variables propias dentro de scope*"
    ]
